@@ -1,15 +1,16 @@
 package io.quarkus.runner.bootstrap;
 
 import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -30,8 +31,10 @@ import io.quarkus.bootstrap.app.AugmentResult;
 import io.quarkus.bootstrap.app.ClassChangeInformation;
 import io.quarkus.bootstrap.app.CuratedApplication;
 import io.quarkus.bootstrap.app.QuarkusBootstrap;
+import io.quarkus.bootstrap.app.SbomResult;
 import io.quarkus.bootstrap.classloading.ClassLoaderEventListener;
 import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
+import io.quarkus.bootstrap.util.PropertyUtils;
 import io.quarkus.builder.BuildChainBuilder;
 import io.quarkus.builder.BuildResult;
 import io.quarkus.builder.item.BuildItem;
@@ -48,6 +51,7 @@ import io.quarkus.deployment.pkg.builditem.BuildSystemTargetBuildItem;
 import io.quarkus.deployment.pkg.builditem.DeploymentResultBuildItem;
 import io.quarkus.deployment.pkg.builditem.JarBuildItem;
 import io.quarkus.deployment.pkg.builditem.NativeImageBuildItem;
+import io.quarkus.deployment.sbom.SbomBuildItem;
 import io.quarkus.dev.spi.DevModeType;
 import io.quarkus.runtime.LaunchMode;
 import io.quarkus.runtime.configuration.QuarkusConfigFactory;
@@ -138,29 +142,30 @@ public class AugmentActionImpl implements AugmentAction {
 
     @Override
     public void performCustomBuild(String resultHandler, Object context, String... finalOutputs) {
-        ClassLoader classLoader = curatedApplication.createDeploymentClassLoader();
-        Class<? extends BuildItem>[] targets = Arrays.stream(finalOutputs)
-                .map(new Function<String, Class<? extends BuildItem>>() {
-                    @Override
-                    public Class<? extends BuildItem> apply(String s) {
-                        try {
-                            return (Class<? extends BuildItem>) Class.forName(s, false, classLoader);
-                        } catch (ClassNotFoundException e) {
-                            throw new RuntimeException(e);
+        try (QuarkusClassLoader classLoader = curatedApplication.createDeploymentClassLoader()) {
+            Class<? extends BuildItem>[] targets = Arrays.stream(finalOutputs)
+                    .map(new Function<String, Class<? extends BuildItem>>() {
+                        @Override
+                        public Class<? extends BuildItem> apply(String s) {
+                            try {
+                                return (Class<? extends BuildItem>) Class.forName(s, false, classLoader);
+                            } catch (ClassNotFoundException e) {
+                                throw new RuntimeException(e);
+                            }
                         }
-                    }
-                }).toArray(Class[]::new);
-        BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, targets);
+                    }).toArray(Class[]::new);
+            BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, targets);
 
-        writeDebugSourceFile(result);
-        try {
-            BiConsumer<Object, BuildResult> consumer = (BiConsumer<Object, BuildResult>) Class
-                    .forName(resultHandler, false, classLoader)
-                    .getConstructor().newInstance();
-            consumer.accept(context, result);
-        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | ClassNotFoundException
-                | InvocationTargetException e) {
-            throw new RuntimeException(e);
+            writeDebugSourceFile(result);
+            try {
+                BiConsumer<Object, BuildResult> consumer = (BiConsumer<Object, BuildResult>) Class
+                        .forName(resultHandler, false, classLoader)
+                        .getConstructor().newInstance();
+                consumer.accept(context, result);
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | ClassNotFoundException
+                    | InvocationTargetException e) {
+                throw new RuntimeException(e);
+            }
         }
     }
 
@@ -169,35 +174,50 @@ public class AugmentActionImpl implements AugmentAction {
         if (launchMode != LaunchMode.NORMAL) {
             throw new IllegalStateException("Can only create a production application when using NORMAL launch mode");
         }
-        ClassLoader classLoader = curatedApplication.createDeploymentClassLoader();
-        BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, ArtifactResultBuildItem.class,
-                DeploymentResultBuildItem.class);
+        try (QuarkusClassLoader classLoader = curatedApplication.createDeploymentClassLoader()) {
+            BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, ArtifactResultBuildItem.class,
+                    DeploymentResultBuildItem.class, SbomBuildItem.class);
 
-        writeDebugSourceFile(result);
+            writeDebugSourceFile(result);
 
-        JarBuildItem jarBuildItem = result.consumeOptional(JarBuildItem.class);
-        NativeImageBuildItem nativeImageBuildItem = result.consumeOptional(NativeImageBuildItem.class);
-        List<ArtifactResultBuildItem> artifactResultBuildItems = result.consumeMulti(ArtifactResultBuildItem.class);
-        BuildSystemTargetBuildItem buildSystemTargetBuildItem = result.consume(BuildSystemTargetBuildItem.class);
+            JarBuildItem jarBuildItem = result.consumeOptional(JarBuildItem.class);
+            NativeImageBuildItem nativeImageBuildItem = result.consumeOptional(NativeImageBuildItem.class);
+            List<ArtifactResultBuildItem> artifactResultBuildItems = result.consumeMulti(ArtifactResultBuildItem.class);
+            BuildSystemTargetBuildItem buildSystemTargetBuildItem = result.consume(BuildSystemTargetBuildItem.class);
+            Map<Path, List<SbomResult>> sboms = getSboms(result.consumeMulti(SbomBuildItem.class));
 
-        // this depends on the fact that the order in which we can obtain MultiBuildItems is the same as they are produced
-        // we want to write result of the final artifact created
-        if (artifactResultBuildItems.isEmpty()) {
-            throw new IllegalStateException("No artifact results were produced");
+            // this depends on the fact that the order in which we can obtain MultiBuildItems is the same as they are produced
+            // we want to write result of the final artifact created
+            if (artifactResultBuildItems.isEmpty()) {
+                throw new IllegalStateException("No artifact results were produced");
+            }
+            ArtifactResultBuildItem lastResult = artifactResultBuildItems.get(artifactResultBuildItems.size() - 1);
+            writeArtifactResultMetadataFile(buildSystemTargetBuildItem, lastResult);
+
+            return new AugmentResult(artifactResultBuildItems.stream()
+                    .map(a -> new ArtifactResult(a.getPath(), a.getType(), a.getMetadata()))
+                    .collect(Collectors.toList()),
+                    jarBuildItem != null ? jarBuildItem.toJarResult(sboms.getOrDefault(jarBuildItem.getPath(), List.of()))
+                            : null,
+                    nativeImageBuildItem != null ? nativeImageBuildItem.getPath() : null,
+                    nativeImageBuildItem != null ? nativeImageBuildItem.getGraalVMInfo().toMap() : Map.of());
         }
-        ArtifactResultBuildItem lastResult = artifactResultBuildItems.get(artifactResultBuildItems.size() - 1);
-        writeArtifactResultMetadataFile(buildSystemTargetBuildItem, lastResult);
+    }
 
-        return new AugmentResult(artifactResultBuildItems.stream()
-                .map(a -> new ArtifactResult(a.getPath(), a.getType(), a.getMetadata()))
-                .collect(Collectors.toList()),
-                jarBuildItem != null ? jarBuildItem.toJarResult() : null,
-                nativeImageBuildItem != null ? nativeImageBuildItem.getPath() : null,
-                nativeImageBuildItem != null ? nativeImageBuildItem.getGraalVMInfo().toMap() : Collections.emptyMap());
+    private Map<Path, List<SbomResult>> getSboms(List<SbomBuildItem> sbomBuildItems) {
+        if (sbomBuildItems.isEmpty()) {
+            return Map.of();
+        }
+        final Map<Path, List<SbomResult>> result = new HashMap<>();
+        for (var sbomBuildItem : sbomBuildItems) {
+            result.computeIfAbsent(sbomBuildItem.getResult().getApplicationRunner(), p -> new ArrayList<>())
+                    .add(sbomBuildItem.getResult());
+        }
+        return result;
     }
 
     private void writeDebugSourceFile(BuildResult result) {
-        String debugSourcesDir = BootstrapDebug.DEBUG_SOURCES_DIR;
+        String debugSourcesDir = BootstrapDebug.debugSourcesDir();
         if (debugSourcesDir != null) {
             for (GeneratedClassBuildItem i : result.consumeMulti(GeneratedClassBuildItem.class)) {
                 try {
@@ -235,8 +255,8 @@ public class AugmentActionImpl implements AugmentAction {
                 properties.put("metadata." + entry.getKey(), entry.getValue());
             }
         }
-        try (FileOutputStream fos = new FileOutputStream(quarkusArtifactMetadataPath.toFile())) {
-            properties.store(fos, "Generated by Quarkus - Do not edit manually");
+        try {
+            PropertyUtils.store(properties, quarkusArtifactMetadataPath, "Generated by Quarkus - Do not edit manually");
         } catch (IOException e) {
             log.debug("Unable to write artifact result metadata file", e);
         }
@@ -247,10 +267,11 @@ public class AugmentActionImpl implements AugmentAction {
         if (launchMode == LaunchMode.NORMAL) {
             throw new IllegalStateException("Cannot launch a runtime application with NORMAL launch mode");
         }
-        ClassLoader classLoader = curatedApplication.createDeploymentClassLoader();
-        @SuppressWarnings("unchecked")
-        BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, NON_NORMAL_MODE_OUTPUTS);
-        return new StartupActionImpl(curatedApplication, result);
+        try (QuarkusClassLoader classLoader = curatedApplication.createDeploymentClassLoader()) {
+            @SuppressWarnings("unchecked")
+            BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, NON_NORMAL_MODE_OUTPUTS);
+            return new StartupActionImpl(curatedApplication, result);
+        }
     }
 
     @Override
@@ -259,13 +280,14 @@ public class AugmentActionImpl implements AugmentAction {
         if (launchMode != LaunchMode.DEVELOPMENT) {
             throw new IllegalStateException("Only application with launch mode DEVELOPMENT can restart");
         }
-        ClassLoader classLoader = curatedApplication.createDeploymentClassLoader();
 
-        @SuppressWarnings("unchecked")
-        BuildResult result = runAugment(!hasStartedSuccessfully, changedResources, classChangeInformation, classLoader,
-                NON_NORMAL_MODE_OUTPUTS);
+        try (QuarkusClassLoader classLoader = curatedApplication.createDeploymentClassLoader()) {
+            @SuppressWarnings("unchecked")
+            BuildResult result = runAugment(!hasStartedSuccessfully, changedResources, classChangeInformation, classLoader,
+                    NON_NORMAL_MODE_OUTPUTS);
 
-        return new StartupActionImpl(curatedApplication, result);
+            return new StartupActionImpl(curatedApplication, result);
+        }
     }
 
     private BuildResult runAugment(boolean firstRun, Set<String> changedResources,
@@ -273,7 +295,7 @@ public class AugmentActionImpl implements AugmentAction {
             Class<? extends BuildItem>... finalOutputs) {
         ClassLoader old = Thread.currentThread().getContextClassLoader();
         try {
-            QuarkusClassLoader classLoader = curatedApplication.getAugmentClassLoader();
+            QuarkusClassLoader classLoader = curatedApplication.getOrCreateAugmentClassLoader();
             Thread.currentThread().setContextClassLoader(classLoader);
             LaunchMode.set(launchMode);
 
@@ -283,7 +305,8 @@ public class AugmentActionImpl implements AugmentAction {
                     .setTargetDir(quarkusBootstrap.getTargetDirectory())
                     .setDeploymentClassLoader(deploymentClassLoader)
                     .setBuildSystemProperties(quarkusBootstrap.getBuildSystemProperties())
-                    .setEffectiveModel(curatedApplication.getApplicationModel());
+                    .setEffectiveModel(curatedApplication.getApplicationModel())
+                    .setDependencyInfoProvider(quarkusBootstrap.getDependencyInfoProvider());
             if (quarkusBootstrap.getBaseName() != null) {
                 builder.setBaseName(quarkusBootstrap.getBaseName());
             }
